welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:4: error: ')' expected but ';' found.
if (estSUrBiscuit();)
                   ^RunFour:4: error: illegal start of statement
if (estSUrBiscuit();)
                    ^