welcome.lessons.welcome.variables.RunFour.scala.code
x=0
while (x!=4) {
    avance();
if (estSUrBiscuit();)
x=x+1
}